# fastapi_project

./: database.py  main.py  pyproject.toml
src/: __init__.py  main.py
src/app/: dependencies.py
src/app/config/: config.py  db.py  settings.py
src/app/models/: b_token.py  user.py
src/app/repository/: b_token.py  user.py
src/app/routers/: user.py
src/app/schemas/: login.py  register.py  user.py
src/app/service/: token.py  user.py
src/config/: database.py  db.py
src/core/models/: repository.py
src/models/: base.py  user.py
src/routers/: __init__.py
src/schemas/: register.py
src/service/: user.py
src/user/: depandencies.py
src/user/model/: user.py
src/user/repositroy/: user.py
src/user/schema/: register.py
src/user/service/: user.py
